Finished UserProfile and ProfileManager and modified Json Files