@@ -47,6 +47,7 @@
         <configuration>
           <source>22</source>
           <target>22</target>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
